<resources>
    <string name="app_name">合从客服</string>
    <string name="text_empty">还没有数据呢！</string>
    <string name="text_retry">重新加载</string>
    <string name="act_start_user">邮箱/手机</string>
    <string name="act_start_password">密码</string>
    <string name="act_login_dl">登录</string>
    <string name="login_chat_btn">微信登录</string>
    <string name="act_login_wjmm">忘记密码?</string>
    <string name="dialog_list">对话</string>
    <string name="dialog_loading">获取中...</string>
    <string name="dialog_close">结束</string>
    <string name="dialog_team">同事的对话</string>
    <string name="dialog_no_received">未接待</string>
    <string name="dialog_all">全部成员</string>
    <string name="urlpath_tv">轨迹</string>
    <string name="break_tv">已离线</string>
    <string name="input_hint">请输入</string>
    <string name="send">发送</string>
    <string name="dialog_empty">没有对话</string>
    <string name="photo">照片</string>
    <string name="converient">快捷回复</string>
    <string name="zan">邀请评价</string>
    <string name="btn_down">点击下载</string>
    <string name="open_down">用其他应用打开</string>
    <string name="chat_set">对话详情</string>
    <string name="no_seting">未设置</string>
    <string name="noknow">未知</string>
    <string name="text_vistor">访客</string>
    <string name="text_mine">我的</string>
    <string name="title_mine">个人信息</string>
    <string name="title_screen">筛选历史对话</string>
    <string name="update_pwd">修改密码</string>
    <string name="title_msg">消息通知</string>
    <string name="title_history">历史对话</string>
    <string name="break_online">当前为离线状态,请在「我的」里切换在线状态</string>
    <!--表情相关-->
    <string name="_1f44c">[OK]</string>
    <string name="_1f44d">[强]</string>
    <string name="_1f44e">[弱]</string>
    <string name="_1f44f">[鼓掌]</string>
    <string name="_1f60a">[愉快]</string>
    <string name="_1f60c">[害羞]</string>
    <string name="_1f60d">[色]</string>
    <string name="_1f60e">[得意]</string>
    <string name="_1f61c">[调皮]</string>
    <string name="_1f61e">[快哭了]</string>
    <string name="_1f62b">[哈欠]</string>
    <string name="_1f62c">[紧张]</string>
    <string name="_1f62d">[流泪]</string>
    <string name="_1f64f">[拜托]</string>
    <string name="_1f91d">[握手]</string>
    <string name="_1f601">[呲牙]</string>
    <string name="_1f602">[笑哭]</string>
    <string name="_1f604">[憨笑]</string>
    <string name="_1f605">[尴尬]</string>
    <string name="_1f609">[眨眼]</string>
    <string name="_1f612">[傲慢]</string>
    <string name="_1f622">[可怜]</string>
    <string name="_1f623">[激动]</string>
    <string name="_1f625">[擦汗]</string>
    <string name="_1f628">[惊讶]</string>
    <string name="_1f629">[囧]</string>
    <string name="_1f630">[冷汗]</string>
    <string name="_1f635">[晕]</string>
    <string name="_1f641">[难过]</string>
    <string name="_1f642">[微笑]</string>
    <string name="id_card_user">请输入证件真实姓名</string>
    <string name="id_card_num">请填写身份证号码</string>
    <string name="agreement1">\u3000\u3000尊敬的合从用户，为了更好地保证您的合法权益，让您正常使用合从功能，合从公司依照国家法律法规，对合从账号进行实名制管理、履行即时通讯工具监管职责并采取风险防控措施。您需要向合从公司提交身份信息、企业信息。\n\u3000\u3000合从公司将严格依据国家法律法规收集、存储、使用您提供的信息，确保信息安全。\n\u3000\u3000请您务必审慎阅读并充分理解《合从服务条款》，若您同意接受前述协议，请点击“我已阅读并同意”，然后继续完成实名认证操作。</string>
    <string name="agreement2">若您同意接受前述协议，请点击“我已阅读并同意”，然后继续完成实名认证操作。</string>


</resources>
