<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <EditText
            android:id="@+id/username"
            android:textSize="16sp"
            android:layout_marginTop="45dp"
            android:hint="@string/act_start_user"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <View
            android:background="@color/black_d5"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"/>
        <EditText
            android:id="@+id/password"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:hint="@string/act_start_password"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <View
            android:background="@color/black_d5"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"/>

        <Button
            android:id="@+id/btn_login"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/act_login_dl"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp" />
        <Button
            android:id="@+id/btn_chat_login"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/login_chat_btn"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_chat_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <TextView
            android:textSize="16sp"
            android:textColor="@color/black_bf"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/act_login_wjmm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>