<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:id="@+id/btn_add"
    android:layout_height="150dp">

    <View
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>




    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/line2"
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/white_et"
            android:layout_width="55dp"
            android:layout_height="55dp">
            <ImageView
                android:src="@mipmap/photos"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </LinearLayout>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:textSize="13sp"
            android:text="@string/photo"
            android:textColor="@color/black_777"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/line1"
        app:layout_constraintRight_toLeftOf="@id/line3"
        app:layout_constraintBottom_toBottomOf="parent"

        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/white_et"
            android:layout_width="55dp"
            android:layout_height="55dp">
            <ImageView
                android:src="@mipmap/convenient"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </LinearLayout>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:textSize="13sp"
            android:text="@string/converient"
            android:textColor="@color/black_777"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/line2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/white_et"
            android:layout_width="55dp"
            android:layout_height="55dp">
            <ImageView

                android:src="@mipmap/zan"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/zan"
            android:textColor="@color/black_777"
            android:textSize="13sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>