<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/chat_lin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/act_chat_include"
        android:background="@color/theme_app"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:padding="9dp"
            android:id="@+id/backImg"
            android:src="@mipmap/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="42dp"
            android:layout_height="50dp" />
        <TextView
            android:id="@+id/msg_count_tv"
            app:layout_constraintCircle="@+id/backImg"
            app:layout_constraintCircleAngle="45"
            app:layout_constraintCircleRadius="16dp"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:minWidth="18dp"
            android:background="@drawable/oval_red"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="11sp"
            />
        <TextView
            android:id="@+id/title_act_chat"
            android:maxEms="10"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/dialog_all"
            android:textColor="@color/white"
            android:layout_marginLeft="6dp"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/backImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:padding="@dimen/window_margin"
            android:id="@+id/btn_choose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:src="@mipmap/more"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/inject_target"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/path_lin"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/act_chat_include"
        android:layout_width="match_parent"
        android:layout_height="34dp">

        <TextView
            android:id="@+id/path_tv"
            android:layout_marginLeft="@dimen/window_margin"
            android:text=""
            android:textSize="13sp"
            android:textColor="@color/break_tv"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:layout_toLeftOf="@id/path_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:gravity="center_vertical"
            android:clickable="true"
            android:id="@+id/path_btn"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/window_margin"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@mipmap/urlpath"
                android:layout_width="22dp"
                android:layout_height="22dp" />
            <TextView
                android:textSize="13sp"
                android:text="@string/urlpath_tv"
                android:layout_alignParentRight="true"
                android:textColor="@color/green_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/recycler_lin"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/path_lin"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <View
            android:background="@color/black_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:overScrollMode="never"
            android:scrollbars="vertical"
            android:id="@+id/path_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recycler_chat_lin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/smartRefresh"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
        <androidx.recyclerview.widget.RecyclerView

            android:overScrollMode="never"
            android:focusableInTouchMode="true"
            android:id="@+id/recycler_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </LinearLayout>

    <RelativeLayout
        android:background="@color/black_f5"
        android:layout_gravity="bottom"
        android:id="@+id/input_lin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:minHeight="50dp"
        android:layout_height="wrap_content">
        <View
            android:background="@color/black_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

            <ImageView
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/window_margin"
                android:id="@+id/yygl"
                android:src="@mipmap/yygl"
                android:layout_width="26dp"
                android:layout_height="26dp" />

        <RelativeLayout
            android:layout_marginRight="@dimen/window_margin"
            android:layout_marginLeft="@dimen/window_margin"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/ex_lin"
            android:layout_toRightOf="@+id/yygl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <EditText
            android:focusableInTouchMode="true"
            android:id="@+id/input_et"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:padding="5dp"
            android:textSize="16sp"
            android:textColorHint="@color/black_cc"
            android:hint=""
            android:background="@drawable/white_et"
            android:layout_width="match_parent"
            android:minHeight="36dp"
            android:maxHeight="120dp"
            android:layout_height="wrap_content" />

            <com.hc_android.hc_css.wight.media.RecordButton
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:id="@+id/btnAudio"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/shape_session_btn_voice"
                android:text="按住说话"
                android:textSize="16dp"
                />
        </RelativeLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/window_margin"
            android:layout_alignParentRight="true"
            android:id="@+id/ex_lin"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/smile"
                android:layout_marginRight="8dp"
                android:src="@drawable/smile"
                android:layout_width="26dp"
                android:layout_height="26dp" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/add_img"
                android:src="@drawable/add"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                android:animateLayoutChanges="true"
               android:visibility="gone"
                android:id="@+id/send_tv"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:text="@string/send"
                android:background="@drawable/login_btn"
                android:layout_width="58dp"
                android:layout_height="38dp" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
    <FrameLayout
        android:visibility="gone"
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/view_layout_add" />
        <include layout="@layout/view_layout_smile" />
    </FrameLayout>
    </LinearLayout>
</LinearLayout>